--- a/portfolio.html
+++ b/portfolio.html
@@ -9,24 +9,25 @@
 </head>
 <body>
     <!-- head_of_the_site -->
-    <header>
-        <nav>
-            <a href="/">WebStudio</a>
-    
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="Portfolio">Портфолио</a></li>
-                <li><a href="Contacts">Контанкты</a></li>
-            </ul>
-        </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38096111111</a></li>
+<header>
+    <nav>
+        <a class="full_logo" href="./index.html"><span class="logo_web">Web</span><span
+                class="logo_studio">Studio</span></a>
+
+        <ul class="site_nav list">
+            <li><a href="./index.html" class="link">Студия</a></li>
+            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li><a href="Contacts" class="link">Контанкты</a></li>
         </ul>
-    </header>
+    </nav>
+    <ul class="auth_nav list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38096111111</a></li>
+    </ul>
+</header>
     <!-- Buttons_for_philters_on_site -->
     <section>
-            <ul>
+            <ul class="list">
             <li><button type="button" value="Все">Все</button></li>
             <li><button type="button" value="Веб-сайты">Веб-сайты</button></li>
             <li><button type="button" value="Приложения">Приложения</button></li>
@@ -36,28 +37,28 @@
     </section>
     <!-- sections_of_our_projects_img-->
     <section>
-        <ul>
-            <li> <a href="Технокряк"> <img src="./images/1.jpg" width="370" alt="ноутбук з відкритим сайтом" /><h3>Технокряк</h3><p>Веб-сайт</p></a></li>
-            <li> <a href="Постер_New_Orlean_vs_Golden_Star"> <img src="./images/2.jpg" width="370" alt="два баскетболіста у стрибку з мьячем" /><h3 >Постер New Orlean vs Golden Star</h3><p>Дизайн</p></a></li>
-            <li> <a href="Ресторан_Seafood"> <img src="./images/3.jpg" width="370" alt="логотип" /><h3>Ресторан Seafood</h3><p>Приложение</p></a></li>
-            <li> <a href="Проект_Prime"> <img src="./images/4.jpg" width="370" alt="навушники" /><h3>Проект Prime</h3><p>Маркетинг</p></a></li>
-            <li> <a href="Проект_Boxes"> <img src="./images/5.jpg" width="370" alt="дві коробочки" /><h3>Проект Boxes</h3><p>Приложение</p></a></li>
-            <li> <a href="Inspiration_has_no_Borders"> <img src="./images/6.jpg" width="370" alt="монітор з данними" /><h3>Inspiration has no Borders</h3><p>Веб-сайт</p></a></li>
-            <li> <a href="Издание_Limited_Edition"> <img src="./images/7.jpg" width="370" alt="розгорнута книжка" /><h3>Издание Limited Edition</h3><p>Дизайн</p></a></li>
-            <li> <a href="Проект_LAB"> <img src="./images/8.jpg" width="370" alt="бірочка брилок з надписом" /><h3>Проект LAB</h3><p>Маркетинг</p></a></li>
-            <li> <a href="Growing_Business"> <img src="./images/9.jpg" width="370" alt="людина друкує на ноутбуці" /><h3>Growing Business</h3><p>Приложение</p></a></li>
+        <ul class="list">
+            <li> <a href="Технокряк"> <img src="./images/1.jpg" width="370" alt="ноутбук з відкритим сайтом" /><h3 class="section_title">Технокряк</h3><p class="subscribing_text">Веб-сайт</p></a></li>
+            <li> <a href="Постер_New_Orlean_vs_Golden_Star"> <img src="./images/2.jpg" width="370" alt="два баскетболіста у стрибку з мьячем" /><h3 class="section_title">Постер New Orlean vs Golden Star</h3><p class="subscribing_text">Дизайн</p></a></li>
+            <li> <a href="Ресторан_Seafood"> <img src="./images/3.jpg" width="370" alt="логотип" /><h3 class="section_title">Ресторан Seafood</h3><p class="subscribing_text">Приложение</p></a></li>
+            <li> <a href="Проект_Prime"> <img src="./images/4.jpg" width="370" alt="навушники" /><h3 class="section_title">Проект Prime</h3><p class="subscribing_text">Маркетинг</p></a></li>
+            <li> <a href="Проект_Boxes"> <img src="./images/5.jpg" width="370" alt="дві коробочки" /><h3 class="section_title">Проект Boxes</h3><p class="subscribing_text">Приложение</p></a></li>
+            <li> <a href="Inspiration_has_no_Borders"> <img src="./images/6.jpg" width="370" alt="монітор з данними" /><h3 class="section_title">Inspiration has no Borders</h3><p class="subscribing_text">Веб-сайт</p></a></li>
+            <li> <a href="Издание_Limited_Edition"> <img src="./images/7.jpg" width="370" alt="розгорнута книжка" /><h3 class="section_title">Издание Limited Edition</h3><p class="subscribing_text">Дизайн</p></a></li>
+            <li> <a href="Проект_LAB"> <img src="./images/8.jpg" width="370" alt="бірочка брилок з надписом" /><h3 class="section_title">Проект LAB</h3><p class="subscribing_text">Маркетинг</p></a></li>
+            <li> <a href="Growing_Business"> <img src="./images/9.jpg" width="370" alt="людина друкує на ноутбуці" /><h3 class="section_title">Growing Business</h3><p class="subscribing_text">Приложение</p></a></li>
         </ul>
     </section>
     <!-- and_footer_of_our_site-->
-    <footer>
+    <footer class="footer">
         <address>
             <a href="/">WebStudio</a>
     
-            <ul>
-                <li><a href="https://goo.gl/maps/Q7D6K2XyAyDVqcr17" rel="noopener noreferrer" target="_blank">г. Киев, пр-т
-                        Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38096111111</a></li>
+            <ul class="auth_nav list">
+                <li><a href="https://goo.gl/maps/Q7D6K2XyAyDVqcr17" class="link" rel="noopener noreferrer"
+                        target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="link">+38096111111</a></li>
             </ul>
         </address>
     </footer>
