--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
     <header>
         <nav>
-        <a class="full_logo" href="./index.html"><span class="logo_web">Web</span><span class="logo_studio">Studio</span></a>
+        <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
     
-     <ul class="site_nav list">
+     <ul class="site-nav list">
         <li><a href="./index.html" class="link">Студия</a></li>
         <li><a href="./portfolio.html"class="link">Портфолио</a></li>
         <li><a href="Contacts"class="link">Контанкты</a></li>
      </ul>
     </nav>
-     <ul class="auth_nav list" >
+     <ul class="auth-nav list" >
         <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="link">+38096111111</a></li>
      </ul>
@@ -28,22 +28,22 @@
     <main>
     <!-- Hero  -->
     <section class="hero">
-        <h1 class="hero_title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
     <button  type="button" value="Заказать услугу">Заказать услугу</button>
     </section>
     <!-- section_about -->
     <section class="section list">
         <ul class="list">
-            <li><h3 class="section_title">Внимание к деталям</h3> <p>Идейные соображения,а также начало повседневной работы по формированию позиции.</p></li>
-            <li><h3 class="section_title">Пунктуальность</h3> <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-            <li><h3 class="section_title">Планирование</h3><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-            <li><h3 class="section_title"> Современные технологии</h3><p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p> </li>
+            <li><h3 class="section-title">Внимание к деталям</h3> <p>Идейные соображения,а также начало повседневной работы по формированию позиции.</p></li>
+            <li><h3 class="section-title">Пунктуальность</h3> <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
+            <li><h3 class="section-title">Планирование</h3><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
+            <li><h3 class="section-title"> Современные технологии</h3><p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p> </li>
         </ul>
     </section>
     <!-- _section_what_we_do -->
 
-    <section class="what_we_do">
-        <h2 class="section_title">Чем мы занимаемся</h2>
+    <section class="what-we-do">
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="list">
             <li><a href="Web-sites"> <img src="./images/box1.jpg" width="370" alt="людина переносить з макету на папері у пк у вебформат html" /> </a></li>
             <li><a href="mobileapplications"> <img src="./images/box2.jpg" width="370" alt="людина розробляє мобильну версію сайту на телефоні і пк" /></a></li>
@@ -52,14 +52,14 @@
     </section>
     <!-- Our_Team -->
 
-    <section class="our_team">
-        <h2 class="section_title" >Наша команда</h2>
+    <section class="our-team">
+        <h2 class="section-title" >Наша команда</h2>
     <ul class="list">
            
-        <li><img src="./images/img1.jpg" width="270" alt="член команди мужик"/><h3 class="section_title">Игорь Демьяненко</h3> <p lang="en">Product Designer</p> </li>
-        <li><img src="./images/img-2.jpg" width="270" alt="член команди баба" /><h3 class="section_title">Ольга Репина</h3><p lang="en">Frontend Developer</p></li>      
-        <li><img src="./images/img-3.jpg" width="270" alt="член команди мужик" /><h3 class="section_title">Николай Тарасов</h3> <p lang="en">Marketing</p></li>   
-        <li><img src="./images/img-4.jpg" width="270" alt="член команди мужик" /><h3 class="section_title">Михаил Ермаков</h3> <p lang="en">UI Designer</p></li>
+        <li><img src="./images/img1.jpg" width="270" alt="член команди мужик"/><h3 class="section-title">Игорь Демьяненко</h3> <p lang="en">Product Designer</p> </li>
+        <li><img src="./images/img-2.jpg" width="270" alt="член команди баба" /><h3 class="section-title">Ольга Репина</h3><p lang="en">Frontend Developer</p></li>      
+        <li><img src="./images/img-3.jpg" width="270" alt="член команди мужик" /><h3 class="section-title">Николай Тарасов</h3> <p lang="en">Marketing</p></li>   
+        <li><img src="./images/img-4.jpg" width="270" alt="член команди мужик" /><h3 class="section-title">Михаил Ермаков</h3> <p lang="en">UI Designer</p></li>
     </ul>
     </section>
 
@@ -67,9 +67,9 @@
 
 <footer class="footer">
 <address>
-    <a href="/">WebStudio</a>
+<a class="full_logo" href="./index.html"><span class="logo_web">Web</span><span class="logo_studio">Studio</span></a>
 
-    <ul class="auth_nav list">
+    <ul class="auth-nav list">
         <li><a href="https://goo.gl/maps/Q7D6K2XyAyDVqcr17" class="link" rel="noopener noreferrer" target="_blank" >г. Киев, пр-т Леси Украинки, 26</a></li>
         <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="link">+38096111111</a></li>
