--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+
     <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
@@ -28,8 +32,8 @@
     <main>
     <!-- Hero  -->
     <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-    <button  type="button" value="Заказать услугу">Заказать услугу</button>
+        <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса </br></h1>
+    <button class="hero-button"  type="button" value="Заказать услугу">Заказать услугу</button>
     </section>
     <!-- section_about -->
     <section class="section list">
@@ -56,25 +60,27 @@
         <h2 class="section-title" >Наша команда</h2>
     <ul class="list">
            
-        <li><img src="./images/img1.jpg" width="270" alt="член команди мужик"/><h3 class="section-title">Игорь Демьяненко</h3> <p lang="en">Product Designer</p> </li>
-        <li><img src="./images/img-2.jpg" width="270" alt="член команди баба" /><h3 class="section-title">Ольга Репина</h3><p lang="en">Frontend Developer</p></li>      
-        <li><img src="./images/img-3.jpg" width="270" alt="член команди мужик" /><h3 class="section-title">Николай Тарасов</h3> <p lang="en">Marketing</p></li>   
-        <li><img src="./images/img-4.jpg" width="270" alt="член команди мужик" /><h3 class="section-title">Михаил Ермаков</h3> <p lang="en">UI Designer</p></li>
+        <li><img src="./images/img1.jpg" width="270" alt="член команди мужик"/><h3 class="team--title">Игорь Демьяненко</h3> <p class="section-subscribe" lang="en">Product Designer </p> </li>
+        <li><img src="./images/img-2.jpg" width="270" alt="член команди баба" /><h3 class="team-title">Ольга Репина</h3><p class="section-subscribe" lang="en">Frontend Developer</p></li>      
+        <li><img src="./images/img-3.jpg" width="270" alt="член команди мужик" /><h3 class="team-title">Николай Тарасов</h3> <p class="section-subscribe" lang="en">Marketing</p></li>   
+        <li><img src="./images/img-4.jpg" width="270" alt="член команди мужик" /><h3 class="team-title">Михаил Ермаков</h3> <p class="section-subscribe" lang="en">UI Designer</p></li>
     </ul>
     </section>
 
 </main>
 
 <footer class="footer">
-<address>
-<a class="full_logo" href="./index.html"><span class="logo_web">Web</span><span class="logo_studio">Studio</span></a>
+    <address>
+        <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span
+                class="logo-studio-footer">Studio</span></a>
 
-    <ul class="auth-nav list">
-        <li><a href="https://goo.gl/maps/Q7D6K2XyAyDVqcr17" class="link" rel="noopener noreferrer" target="_blank" >г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38096111111</a></li>
-    </ul>
-</address>
+        <ul class="footer-nav list">
+            <li><a href="https://goo.gl/maps/Q7D6K2XyAyDVqcr17" class="footer-adress link" rel="noopener noreferrer"
+                    target="_blank" >г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com" class="footer-link link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="footer-link link">+38096111111</a></li>
+        </ul>
+    </address>
 </footer>
 </body>
 </html>
