--- a/portfolio.html
+++ b/portfolio.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- head_of_the_site -->
 <header>
     <nav>
-        <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span
-                class="logo_studio">Studio</span></a>
+        <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
 
         <ul class="site-nav list">
             <li><a href="./index.html" class="link">Студия</a></li>
@@ -25,10 +28,11 @@
         <li><a href="tel:+380961111111" class="link">+38096111111</a></li>
     </ul>
 </header>
-    <!-- Buttons_for_philters_on_site -->
-    <section>
+
+    <!-- Buttons_for_flters_on_site -->
+    <section class="filter-buttons">
             <ul class="list">
-            <li><button type="button" value="Все">Все</button></li>
+            <li><button type="button" value="Все" class="filter-buttons">Все</button></li>
             <li><button type="button" value="Веб-сайты">Веб-сайты</button></li>
             <li><button type="button" value="Приложения">Приложения</button></li>
             <li><button type="button" value="Дизайн">Дизайн</button></li>
@@ -36,10 +40,10 @@
             </ul>
     </section>
     <!-- sections_of_our_projects_img-->
-    <section>
+    <section class="our-projects">
         <ul class="list">
             <li> <a href="Технокряк"> <img src="./images/1.jpg" width="370" alt="ноутбук з відкритим сайтом" /><h3 class="section-title">Технокряк</h3><p class="subscribing-text">Веб-сайт</p></a></li>
-            <li> <a href="Постер_New_Orlean_vs_Golden_Star"> <img src="./images/2.jpg" width="370" alt="два баскетболіста у стрибку з мьячем" /><h3 class="section-title">Постер New Orlean vs Golden Star</h3><p class="subscribing_text">Дизайн</p></a></li>
+            <li> <a href="Постер_New_Orlean_vs_Golden_Star"> <img src="./images/2.jpg" width="370" alt="два баскетболіста у стрибку з мьячем" /><h3 class="section-title">Постер New Orlean vs Golden Star</h3><p class="subscribing-text">Дизайн</p></a></li>
             <li> <a href="Ресторан_Seafood"> <img src="./images/3.jpg" width="370" alt="логотип" /><h3 class="section-title">Ресторан Seafood</h3><p class="subscribing-text">Приложение</p></a></li>
             <li> <a href="Проект_Prime"> <img src="./images/4.jpg" width="370" alt="навушники" /><h3 class="section-title">Проект Prime</h3><p class="subscribing-text">Маркетинг</p></a></li>
             <li> <a href="Проект_Boxes"> <img src="./images/5.jpg" width="370" alt="дві коробочки" /><h3 class="section-title">Проект Boxes</h3><p class="subscribing-text">Приложение</p></a></li>
@@ -52,13 +56,14 @@
     <!-- and_footer_of_our_site-->
     <footer class="footer">
         <address>
-            <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+            <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span
+                    class="logo-studio-footer">Studio</span></a>
     
-            <ul class="auth-nav list">
-                <li><a href="https://goo.gl/maps/Q7D6K2XyAyDVqcr17" class="link" rel="noopener noreferrer"
+            <ul class="footer-nav list">
+                <li><a href="https://goo.gl/maps/Q7D6K2XyAyDVqcr17" class="footer-adress link" rel="noopener noreferrer"
                         target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38096111111</a></li>
+                <li><a href="mailto:info@devstudio.com" class="footer-link link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="footer-link link">+38096111111</a></li>
             </ul>
         </address>
     </footer>
