вносить правки після ментора
Вніс правки ЦСС після перевірки ментором

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h2 class="section-title" >Наша команда</h2>
     <ul class="list">
            
-        <li><img src="./images/img1.jpg" width="270" alt="член команди мужик"/><h3 class="team--title">Игорь Демьяненко</h3> <p class="section-subscribe" lang="en">Product Designer </p> </li>
+        <li><img src="./images/img1.jpg" width="270" alt="член команди мужик"/><h3 class="team-title">Игорь Демьяненко</h3> <p class="section-subscribe" lang="en">Product Designer </p> </li>
         <li><img src="./images/img-2.jpg" width="270" alt="член команди баба" /><h3 class="team-title">Ольга Репина</h3><p class="section-subscribe" lang="en">Frontend Developer</p></li>      
         <li><img src="./images/img-3.jpg" width="270" alt="член команди мужик" /><h3 class="team-title">Николай Тарасов</h3> <p class="section-subscribe" lang="en">Marketing</p></li>   
         <li><img src="./images/img-4.jpg" width="270" alt="член команди мужик" /><h3 class="team-title">Михаил Ермаков</h3> <p class="section-subscribe" lang="en">UI Designer</p></li>
@@ -70,10 +70,10 @@
 </main>
 
 <footer class="footer">
-    <address>
+    
         <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span
                 class="logo-studio-footer">Studio</span></a>
-
+        <address class="address">
         <ul class="footer-nav list">
             <li><a href="https://goo.gl/maps/Q7D6K2XyAyDVqcr17" class="footer-adress link" rel="noopener noreferrer"
                     target="_blank" >г. Киев, пр-т Леси Украинки, 26</a></li>
