--- a/portfolio.html
+++ b/portfolio.html
@@ -55,10 +55,10 @@
     </section>
     <!-- and_footer_of_our_site-->
     <footer class="footer">
-        <address>
-            <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span
-                    class="logo-studio-footer">Studio</span></a>
     
+        <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span
+                class="logo-studio-footer">Studio</span></a>
+        <address class="address">
             <ul class="footer-nav list">
                 <li><a href="https://goo.gl/maps/Q7D6K2XyAyDVqcr17" class="footer-adress link" rel="noopener noreferrer"
                         target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
